Make shared parcel publication transactional